# MarlSat

./: README.md  main.py  pyproject.toml  todo.md  tools.md
data_proccessing/: core.py  data_proccessing.py  graphs 2.py  rendering.py
rendering/: core.py
