[project]
name = "marlsat"
version = "0.1.0"
description = "Marlborough Cansat project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyqt6>=6.10.2",
    "pyqtgraph>=0.14.0",
    "scipy>=1.17.0",
    "scipy-stubs~=1.17.0",
]
